# lab

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: Dockerfile  compose.example.yml  docker-compose.prod.yml
docs/: architecture.md  development.md
lab/: app.py
lab/static/: styles.css
lab/templates/: base.html  blog.html  index.html
scripts/: build.sh  run.sh  setup.sh  smoke.sh  test.sh
tests/: test_app.py
