[project]
name = "lab"
version = "0.1.0"
description = "A small FastAPI app for testing application delivery workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["lab*"]
